// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trait Header snapshot renders 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      label="Level Label"
      markup="Category"
      onChange={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without description 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      label="Level Label"
      markup="Category"
      onChange={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without level tag input 1`] = `
<WithStyles(Component)
  height="100px"
>
  <WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without score point labels 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      label="Level Label"
      markup="Category"
      onChange={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without score point values 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      label="Level Label"
      markup="Category"
      onChange={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without standards 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      label="Level Label"
      markup="Category"
      onChange={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <WithStyles(Component)
        maxPoints={2}
      />
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
  >
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        onChange={[Function]}
        pluginProps={
          Object {
            "audio": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": true,
            },
            "math": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": true,
            },
          }
        }
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;
